# github-actions-tools

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  github_actions_dependency_graph.py  github_actions_extract_scripts.py  github_actions_simulate_matrix.py  main.py  pyproject.toml
models/github/: action.py  workflow.py
schemas/: github-action.json  github-workflow.json
test/data/: sort-actions-and-workflows.py
test/data/actions/go-dependency-submission/: action.yml
test/data/actions/setup-node/: action.yml
test/data/actions/upload-artifact/: action.yml
test/data/workflows/: action-versions_.github_workflows_ci.yml  actions-sync-e2e-test-called.yml  actions-sync-e2e-test-caller.yml  artifact-tests.yml  boost-versions_.github_workflows_create-pr.yml  build-python-packages.yml  build-release-alpine-nodejs.yml  build.yaml  cache-tests.yml  cache-windows-test.yml  canary.yaml  ci-workflow.yml  ci.yml  code-ql.yml  codeql-analysis.yml  codeql.yml  create-release.yml  create_sbom_report.yml  docker-buildx-upgrade.yml  dotnet-upgrade.yml  e2e_test.yml  first-interaction.yml  get-node-versions.yml  get-python-versions.yml  gh-actions-cache_.github_workflows_lint.yml  gh-actions-cache_.github_workflows_release.yml  go-versions_.github_workflows_codeql-analysis.yml  issue-opened-workflow.yml  label-feature.yml  label-support.yml  labeler.yml  manifest-config-validation.yml  node-versions_.github_workflows_codeql-analysis.yml  nowsecure-mobile-sbom.yml  nowsecure.yml  powershell-tests.yml  pr-opened-workflow.yml  python-versions-runner.yml  python-versions_.github_workflows_codeql-analysis.yml  python-versions_.github_workflows_validate-manifest.yml  (+16 more)
